fix(dsfr): :lipstick: fix button with icon too tall

--- a/theme/less/components/buttons.less
+++ b/theme/less/components/buttons.less
@@ -74,22 +74,21 @@ These are now removed, see tags instead.
 
 // Data.gouv customization
 .fr-btn {
-    font-size: @font-size-xs;
+    font-size: @font-size-sm;
     --background-action-high-blue-france: @blue-400;
     --background-action-high-blue-france-hover: @blue-400-hover;
     --background-action-high-blue-france-active: @blue-400-active;
     border-radius: 3em;
-    line-height: @font-size-sm;
-    padding: 0.5rem 0.75rem;
-    min-height: 2rem;
 }
 
-.fr-btn--lg {
-    font-size: @font-size-sm;
-    border-radius: 3em;
-    line-height: @font-size-base;
-    padding: 0.75rem 1rem;
-    min-height: 2.5rem;
+.fr-btn--sm {
+    font-size: @font-size-xs;
+    line-height: 1.2;
+    padding: 0.5rem 0.75rem;
+    min-height: 2rem;
+    &.fr-btn--icon-left {
+        padding-bottom: 0.4rem;
+    }
 }
 
 .fr-header__menu-links .fr-btn {
@@ -101,7 +100,7 @@ These are now removed, see tags instead.
     --text-action-high-blue-france: @blue-400;
 }
 
-.fr-btn--secondary, .fr-btn--tertiary {
+.fr-btn--secondary, .fr-btn--tertiary,  .fr-btn--tertiary-no-outline {
     --text-action-high-blue-france: @blue-400;
     --border-action-high-blue-france: @blue-400;
 }
